Fix header to close gap.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 80px;
   background-color: white;
+  top: 0;
 }
 
 .header p {
